Fix Hover Z-index

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -61,6 +61,10 @@
     right: 0;
 }
 
+.card-image {
+    z-index: 1;
+}
+
  .list-item {
      width: 14.063rem;
      height: 7.5rem;
@@ -69,18 +73,15 @@
      cursor: pointer;
      background-color: #0b0b0b;
      top: 0;
+     z-index: 1;
      transition: all 200ms;
-     transition-property: width, height, top, visibility, box-shadow, -webkit-box-shadow, padding-bottom, margin-bottom;
+     transition-property: width, height, top, visibility, box-shadow, -webkit-box-shadow, padding-bottom, margin-bottom, z-index;
      list-style: none;
  }
 
 .list-item:hover .itemInfo {
     visibility: visible;
     transition-delay: 650ms;
-}
-
-.card-image:hover {
-    height: 8.75rem;
 }
 
 .itemInfo {
@@ -197,6 +198,10 @@
      background-color: #181818;
  }
 
+ .list:hover {
+     z-index: 4;
+ }
+
  .list-item:hover {
      transition-delay: 650ms;
      width: 20.313rem;
@@ -205,7 +210,8 @@
      box-shadow: 0 0 .938rem 0 rgba(255,255,255,0.1);
      position: relative;
      top: -5rem;
-     margin-bottom: -9rem;
+     margin-bottom: -12rem;
      padding-bottom: 0;
+     z-index: 4;
  }
 
